@@ -1,3 +1,9 @@
+
+Thu Dec 23 14:58:09 EST 2004 Paolo Molaro <lupus@ximian.com>
+
+	* serial.c: remove mono calls from here: they break the build
+	and they don't belong here.
+
 2004-12-21  Chris Toshok  <toshok@ximian.com>
 
 	* serial.c: initial import of System.IO.Ports pinvoke stuff.
